objects/Lead.object
<CustomObject>
    <fields>
        <fullName>TX_Appointment_Set_for_Email__c</fullName>
        <formula>CASE( MOD( datevalue(Last_Appointment_Set_Start_DateTime__c) - DATE(1900, 1, 7), 7), 0, "Sunday", 1, "Monday",  
       2, "Tuesday", 3, "Wednesday", 4, "Thursday", 5, "Friday", 6, "Saturday","Error") &amp; ", " &amp; 

       CASE(MONTH(datevalue(Last_Appointment_Set_Start_DateTime__c)), 1, "January", 2, "February", 3, "March", 4, "April", 
       5, "May", 6, "June", 7, "July", 8, "August", 9, "September", 10, "October", 11, "November", 12, "December", "None") 
       &amp; " " &amp; Text(Day(datevalue(Last_Appointment_Set_Start_DateTime__c))) &amp; " at " &amp;


       IF ( DATEVALUE(Last_Appointment_Set_Start_DateTime__c) &gt;=
	DATE ( YEAR (DATEVALUE(Last_Appointment_Set_Start_DateTime__c)),3,1)
	+
	(
	14-
	CASE( MOD(DATE ( YEAR (DATEVALUE(Last_Appointment_Set_Start_DateTime__c)),3,1) - DATE (1900,1,7),7) ,
	0,7,MOD(DATE ( YEAR (DATEVALUE(Last_Appointment_Set_Start_DateTime__c)),3,1) - DATE (1900,1,7),7))
	)
	&amp;&amp;
	DATEVALUE(Last_Appointment_Set_Start_DateTime__c) &lt;
	DATE ( YEAR (DATEVALUE(Last_Appointment_Set_Start_DateTime__c)),11,1)
	+
	(
	7-
	CASE( MOD(DATE ( YEAR (DATEVALUE(Last_Appointment_Set_Start_DateTime__c)),11,1) - DATE (1900,1,7),7) ,
	0,7,MOD(DATE ( YEAR (DATEVALUE(Last_Appointment_Set_Start_DateTime__c)),11,1) - DATE (1900,1,7),7))
	),
 
        IF(value( mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 5/24), 12,2))&lt;12, 
        mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 5 /24), 12,2) &amp; ":" &amp; 
        MID( TEXT( Last_Appointment_Set_Start_DateTime__c - 5 ), 15, 2 ) &amp; " AM", 
        IF(value( mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 5 /24), 12,2))=12,"12" &amp; ":" &amp; 
        MID( TEXT( Last_Appointment_Set_Start_DateTime__c - 5 ), 15, 2 ) &amp; " PM" , 
        text(value( mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 5/24), 12,2))-12) &amp; ":" &amp; 
        MID( TEXT( Last_Appointment_Set_Start_DateTime__c - 5 ), 15, 2 ) &amp; " PM" )) &amp; " CST",


        IF(value( mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 6/24), 12,2))&lt;12, 
        mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 6 /24), 12,2) &amp; ":" &amp; 
        MID( TEXT( Last_Appointment_Set_Start_DateTime__c - 6 ), 15, 2 ) &amp; " AM", 
        IF(value( mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 6 /24), 12,2))=12,"12" &amp; ":" &amp; 
        MID( TEXT( Last_Appointment_Set_Start_DateTime__c - 6 ), 15, 2 ) &amp; " PM" , 
        text(value( mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 6/24), 12,2))-12) &amp; ":" &amp; 
        MID( TEXT( Last_Appointment_Set_Start_DateTime__c - 6 ), 15, 2 ) &amp; " PM" )) &amp; " CST"
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TX Appointment Set Display for Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TX_Bathrooms__c</fullName>
        <inlineHelpText>Legacy TX Lead field for Marketing purposes</inlineHelpText>
        <label>Bathrooms (TX)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4+</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TX_Bedrooms__c</fullName>
        <inlineHelpText>Legacy TX Lead field for Marketing purposes</inlineHelpText>
        <label>Bedrooms (TX)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TX_Call_Rail__c</fullName>
        <inlineHelpText>Legacy Lead field for TX Marketing</inlineHelpText>
        <label>Call Rail (TX)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TX_Comments_from_Contact_Us_Form__c</fullName>
        <label>Comments from Contact Us Form</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TX_Confirmed_Appointment_Was_Kept__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field used to confirm if an appointment was met or not via workflow rules.</description>
        <label>[TX] Confirmed Appointment Was Kept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TX_Current_User_is_Creator__c</fullName>
        <description>Created for TX but is a formula to determine if the current user is the person who created the lead. Used to determine whether to send the current user an email about the lead being created.</description>
        <formula>If( CreatedById = $User.Id ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is Creator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TX_Do_you_currently_own_or_rent__c</fullName>
        <inlineHelpText>Legacy Lead field for TX Marketing</inlineHelpText>
        <label>Do you currently own or rent? (TX)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TX_First_Response_Time_m__c</fullName>
        <label>First Response Time (m)  (TX)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TX_Garage__c</fullName>
        <label>Garage (TX)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TX_Hobbies_and_Interests__c</fullName>
        <label>Hobbies and Interests (TX)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arts and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Culinary</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Science and Tech</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Outdoor Recreation</fullName>
                </value>
                <value>
                    <fullName>Sports, Fitness, Games</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TX_Home_Size__c</fullName>
        <inlineHelpText>Legacy Lead field for TX Marketing</inlineHelpText>
        <label>Home Size (TX)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TX_How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us? (TX)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Drive By</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Flyer/Brochure</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Google/Online Search</fullName>
                </value>
                <value>
                    <fullName>Internet Radio</fullName>
                </value>
                <value>
                    <fullName>Magazine Ad</fullName>
                </value>
                <value>
                    <fullName>Newspaper Ad</fullName>
                </value>
                <value>
                    <fullName>Online Ad</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Radio Ad</fullName>
                </value>
                <value>
                    <fullName>Real Estate Agent</fullName>
                </value>
                <value>
                    <fullName>Television Ad</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TX_I_am_represented_by__c</fullName>
        <label>I am represented by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Real Estate Agent</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TX_Interested_in_knowing_about_Other__c</fullName>
        <label>Interested in knowing about "Other"</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TX_Interested_in_knowing_more_about__c</fullName>
        <label>Interested in knowing more about</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health and wellness</fullName>
                </value>
                <value>
                    <fullName>Food and Wine</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Arts and Culture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TX_Kissing_Tree_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kissing Tree Survey (TX)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TX_Legacy_Lead_ID__c</fullName>
        <externalId>true</externalId>
        <label>TX Legacy Lead ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TX_Legacy_Lead__c</fullName>
        <formula>if ( isblank(TX_Legacy_Lead_ID__c ), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this a lead imported from the previous Salesforce system for Texas?</inlineHelpText>
        <label>TX Legacy Lead (*see notes below)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TX_Legacy_Status__c</fullName>
        <label>TX Legacy Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Joined</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TX_Master_Bedroom__c</fullName>
        <inlineHelpText>Legacy TX Lead field for Marketing purposes</inlineHelpText>
        <label>Master Bedroom (TX)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upstairs</fullName>
                </value>
                <value>
                    <fullName>Downstairs</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TX_Realtor_Address__c</fullName>
        <inlineHelpText>for Traffic Card Information (TX)</inlineHelpText>
        <label>Realtor Address (TX)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TX_Realtor_First_Name__c</fullName>
        <inlineHelpText>for Traffic Card Information (TX)</inlineHelpText>
        <label>Realtor First Name (TX)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TX_Realtor_How_did_you_hear_about_us__c</fullName>
        <inlineHelpText>for Traffic Card Information (TX)</inlineHelpText>
        <label>Realtor How did you hear about us? (TX)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TX_Realtor_Last_Name__c</fullName>
        <inlineHelpText>for Traffic Card Information (TX)</inlineHelpText>
        <label>Realtor Last Name (TX)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TX_Realtor_Phone__c</fullName>
        <inlineHelpText>for Traffic Card Information (TX)</inlineHelpText>
        <label>Realtor Phone (TX)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TX_Realtor_Representing__c</fullName>
        <inlineHelpText>for Traffic Card Information (TX)</inlineHelpText>
        <label>Realtor Representing (TX)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TX_Realtor_Zip_Code__c</fullName>
        <inlineHelpText>for Traffic Card Information (TX)</inlineHelpText>
        <label>Realtor Zip Code (TX)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TX_Stories__c</fullName>
        <label>Stories (TX)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3+</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TX_Timeframe_to_purchase__c</fullName>
        <label>Timeframe to purchase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 Day</fullName>
                </value>
                <value>
                    <fullName>1-3 Month</fullName>
                </value>
                <value>
                    <fullName>3-6 Month</fullName>
                </value>
                <value>
                    <fullName>6-12 Months</fullName>
                </value>
                <value>
                    <fullName>1-2 Years</fullName>
                </value>
                <value>
                    <fullName>2+ Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeframe_to_move_in__c</fullName>
        <label>Timeframe to move-in</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>1-3 Month</fullName>
                </value>
                <value>
                    <fullName>3-6 Month</fullName>
                </value>
                <value>
                    <fullName>6-12 Months</fullName>
                </value>
                <value>
                    <fullName>1-2 Years</fullName>
                </value>
                <value>
                    <fullName>2+ Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <inlineHelpText>Enter the date prospect expects to move in, purchase, close, etc. Then make a note on as to what this timing is in reference to.</inlineHelpText>
        <label>Timing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_keep_me_out_of_trouble__c</fullName>
        <label>To keep me out of trouble:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Sale_Amount__c</fullName>
        <label>Total Actual Sale Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Amount__c</fullName>
        <label>Total Discount Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Sale_Amount__c</fullName>
        <formula>Base_Model_Price__c 
+ Lot_Premium__c 
+ Lot_Price__c 
+ Total_Options_Amount__c 
- Total_Discount_Amount__c 
+ Total_Tax_Amount__c 
- Total_Tax_Rebate_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Options_Amount__c</fullName>
        <label>Total Options Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sale_Amount__c</fullName>
        <description>Presents either an actual deal total set by NEWSTAR or an estimated total computed locally in Salesforce</description>
        <formula>IF( Total_Actual_Sale_Amount__c&gt;0,  Total_Actual_Sale_Amount__c,  Total_Estimated_Sale_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Amount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Rebate_Amount__c</fullName>
        <label>Total Tax Rebate Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transferring_to_area_date__c</fullName>
        <inlineHelpText>If lead is transferring to the area, enter date they expect to transfer.</inlineHelpText>
        <label>Transferring to area date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Brookfield_website_during_search__c</fullName>
        <label>Visit Brookfield website during search?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Date of First Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>What_is_your_price_range__c</fullName>
        <inlineHelpText>Legacy TX Lead field for Marketing purposes</inlineHelpText>
        <label>What is your price range?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>under $250,000</fullName>
                </value>
                <value>
                    <fullName>$250,000 - $299,999</fullName>
                </value>
                <value>
                    <fullName>$300,000 - $349,999</fullName>
                </value>
                <value>
                    <fullName>$350,000 - $399,999</fullName>
                </value>
                <value>
                    <fullName>$400,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>$500,000 - $599,999</fullName>
                </value>
                <value>
                    <fullName>$600,000 - $699,999</fullName>
                </value>
                <value>
                    <fullName>$700,000 - $849,999</fullName>
                </value>
                <value>
                    <fullName>$850,000 - $999,999</fullName>
                </value>
                <value>
                    <fullName>$1,000,000 - $1,999,999</fullName>
                </value>
                <value>
                    <fullName>Over $2,000,000</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $149,999</fullName>
                    <isActive>false</isActive>
                    <label>$100,000 - $149,999</label>
                </value>
                <value>
                    <fullName>$150,000 - $199,999</fullName>
                    <isActive>false</isActive>
                    <label>$150,000 - $199,999</label>
                </value>
                <value>
                    <fullName>$200,000 - $249,999</fullName>
                    <isActive>false</isActive>
                    <label>$200,000 - $249,999</label>
                </value>
                <value>
                    <fullName>$500,000 - $700,000</fullName>
                    <isActive>false</isActive>
                    <label>$500,000 - $700,000</label>
                </value>
                <value>
                    <fullName>Over $700,000</fullName>
                    <isActive>false</isActive>
                    <label>Over $700,000</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_describes_your_household__c</fullName>
        <label>Which describes your household?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Couple without Children</fullName>
                </value>
                <value>
                    <fullName>Multi-generational family</fullName>
                </value>
                <value>
                    <fullName>Couple with Children</fullName>
                </value>
                <value>
                    <fullName>Siblings</fullName>
                </value>
                <value>
                    <fullName>Couple planning for Children</fullName>
                </value>
                <value>
                    <fullName>Single with Children</fullName>
                </value>
                <value>
                    <fullName>Adult with Elderly Parent</fullName>
                </value>
                <value>
                    <fullName>Empty Nester</fullName>
                </value>
                <value>
                    <fullName>Unrelated Adults</fullName>
                </value>
                <value>
                    <fullName>Couple &amp; Siblings</fullName>
                    <isActive>false</isActive>
                    <label>Couple &amp; Siblings</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Word_your_friends_use_to_describe_you__c</fullName>
        <label>Word your friends use to describe you</label>
        <type>TextArea</type>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today's Leads</label>
    </listViews>
</CustomObject>